--- a/apps/templates/home/GS_result.html
+++ b/apps/templates/home/GS_result.html
@@ -204,14 +204,14 @@
         <tr>
             <td colspan="2" style="text-align: center;">{{isolate.Date_Released}}</td>
             <td style="text-align: center;" colspan="2" >
-                <strong class="signature-name"><br><br>Jaywardeen P. Abad, RMT</strong><br>
-                <span style="font-size: 10px;">License Number: 0042797</span> <br>
-                <span style="font-size: 10px;">Medical Technologist</span>
+                <strong class="signature-name"><br><br>{{isolate.Laboratory_Staff}}</strong><br>
+                <span style="font-size: 10px;">License Number: {{isolate.ars_license}}</span> <br>
+                <span style="font-size: 10px;">{{isolate.ars_designation}}</span>
             </td>
             <td style="text-align: center;" colspan="2">
-                 <strong class="signature-name"><br><br>Manuel C. Jamoralin Jr., RMT</strong><br>
-                <span style="font-size: 10px;"> License Number: 0032847 </span> <br>
-                <span style="font-size: 10px;"> Medical Technologist </span>
+                 <strong class="signature-name"><br><br>{{isolate.Validator_Pers}}</strong><br>
+                <span style="font-size: 10px;"> License Number: {{isolate.val_license}} </span> <br>
+                <span style="font-size: 10px;"> {{isolate.val_designation}} </span>
             </td>
             <td style="text-align: center;" colspan="2">
                 <strong class="signature-name"><br><br>Sonia B. Sia, MD</strong><br>
