--- a/apps/templates/home/Lab_result.html
+++ b/apps/templates/home/Lab_result.html
@@ -302,7 +302,9 @@
             <td colspan="2"><strong style="font-size: 8px;">Painful urination:</strong>&nbsp;{{isolate.Symp_Painful_Urination}}</td>
         </tr>
         <tr>
-            <td colspan="2">&nbsp;&nbsp;&nbsp;&nbsp;<strong>Other:</strong>&nbsp;{{isolate.Other}}</td>
+            <td colspan="2">&nbsp;&nbsp;&nbsp;&nbsp;<strong style="font-size: 8px;">Rectal Pain:</strong>&nbsp;{{isolate.Symp_Rectal_Pain}}</td>
+            <td colspan="2"><strong style="font-size: 8px;">Painful Intercourse:</strong>&nbsp;{{isolate.Symp_Painful_Intercourse}}</td>
+            <td colspan="2"><strong style="font-size: 8px;">Other:</strong>&nbsp;{{isolate.Other}}</td>
         </tr>
         <tr style="border-top: 1px solid gray;" >
             <td colspan="3" style="font-size: 8px;"><strong>4.3 Previously tested positive for gonorrhea:</strong> {{isolate.Prev_Test_Pos}}</td>
@@ -465,7 +467,7 @@
                     <td class="gray-background" colspan="4"><strong style="font-size: 10.5px;">11. RETESTED ANTIMICROBIAL SUSCEPTIBILITY TESTING</strong></td>
                 </tr>
                 <tr>
-                    <td colspan="4"><strong>10.1 Specimen Quality:</strong>&nbsp;&nbsp;{{isolate.Specimen_Quality}}</td>
+                    <td colspan="4"><strong>10.1 Specimen Quality:</strong>&nbsp;&nbsp;{{isolate.Specimen_Quality_Cs}}</td>
                     <td colspan="4"><strong>11.1 Retested AST</strong>&nbsp;&nbsp;{{isolate.Retested_Mic}}</td>
                 </tr>
                 <tr style="border-top: 1px solid gray;">
