--- a/apps/templates/home/Contact_Form.html
+++ b/apps/templates/home/Contact_Form.html
@@ -2,18 +2,19 @@
 {% load static %}
 {% load widget_tweaks %}
 
-{% block title %} Add New Contact {% endblock title %}
+{% block title %} Add Contact{% endblock title %}
 
 {% block stylesheets %}{% endblock stylesheets %}
 
 {% block content %}
+
 <div class="container">
     <div class="col-lg-12">
         <div class="text-right">
-            <a href="{% url 'contact_view' %}" class="btn btn-secondary mt-4">View all</a>
+            <a href="{% url 'contact_view' %}" class="btn btn-secondary mt-4">View</a>
         </div>
         <div class="text-center text-muted mb-4">
-            <h2>Add New Contact</h2>
+            <h2>Add Staff Details</h2>
         </div>
         <form method="POST" action="{% url 'add_contact' %}" autocomplete="on" id="contactform">
             {% csrf_token %}
@@ -21,27 +22,30 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="row">
-                            <div class="col-lg-6">
+                            <div class="col-lg-2"></div>
+                            <div class="col-lg-8">
                                 <div class="form-group">
-                                    <label class="form-control-label" for="ClinStaff_Name">Name of Clinic Staff:</label>
+                                    <label class="form-control-label" for="ClinStaff_Name">Name of ARSP Staff:</label>
                                     {{ form.ClinStaff_Name|append_attr:"class:form-control" }}
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="form-group">
-                                    <label class="form-control-label" for="ClinStaff_Telnum">Telephone Number:</label>
-                                    {{ form.ClinStaff_Telnum|append_attr:"class:form-control" }}
                                 </div>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-12">
+                            <div class="col-lg-6">
                                 <div class="form-group">
-                                    <label class="form-control-label" for="ClinStaff_EmailAdd">Email Address:</label>
-                                    {{ form.ClinStaff_EmailAdd|append_attr:"class:form-control" }}
+                                    <label class="form-control-label" for="ClinStaff_License">License No:</label>
+                                    {{ form.ClinStaff_License|append_attr:"class:form-control" }}
                                 </div>
                             </div>
-                        </div>
+                        
+
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    <label class="form-control-label" for="ClinStaff_Designation">Designation:</label>
+                                    {{ form.ClinStaff_Designation|append_attr:"class:form-control" }}
+                                </div>
+                            </div>
+                            </div>
                     </div>
                 </div>
             </div>
