enable sorting in tables and printing in edit form

--- a/apps/templates/home/Contact_Edit.html
+++ b/apps/templates/home/Contact_Edit.html
@@ -50,6 +50,20 @@
           </div>
         </div>
       </div>
+      <div class="row">
+         <div class="col-lg-6">
+          <div class="form-group">
+            <label class="form-control-label" for="ClinStaff_Contact">Contact No:</label>
+            {{ form.ClinStaff_Contact|append_attr:"class:form-control" }}
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="form-group">
+            <label class="form-control-label" for="ClinStaff_Email">Email Address:</label>
+            {{ form.ClinStaff_Email|append_attr:"class:form-control" }}
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
