--- a/apps/templates/includes/sidenav.html
+++ b/apps/templates/includes/sidenav.html
@@ -45,17 +45,16 @@
 <nav class="sidenav navbar navbar-vertical  fixed-left  navbar-expand-xs navbar-light bg-white" id="sidenav-main">
   <div class="scrollbar-inner">
     <!-- Brand -->
-     <div style="text-align: left;">
+     <div style="text-align: right;">
         <button class="sidenav-toggler" id="toggle-sidenav" style="background: none; border: none; margin: 9px;">
       <i class="ni ni-align-left-2 text-primary"></i>
         </button>
     </div>
-   <div class="sidenav-header align-items-center">
+    <!-- <div class="sidenav-header align-items-right">
       <a class="navbar-brand" href="/">
         <img src="/static/assets/img/brand/egasp_n.png" class="navbar-brand-img" alt="Egasp" style="height: 100%; width: auto;">
       </a>
-    </div>
-      
+    </div> -->
     <div class="navbar-inner">
       <!-- Collapse -->
       <div class="collapse navbar-collapse" id="sidenav-collapse-main">
