--- a/apps/templates/home/crf_form.html
+++ b/apps/templates/home/crf_form.html
@@ -1436,6 +1436,29 @@ label.form-control-label{
                             </div>
                           </div>
                      </div>
+                     <div class="row">
+                      <div class="col-lg-6">
+                            <div class="form-group">
+                              <label class='form-control-label' for='ars_email'>Email Address</label> {{form.ars_email| append_attr:"class: form-control"|append_attr:"tabindex:312"}}
+                              
+                            </div>
+                          </div>
+                          <div class="col-lg-6">
+                            <div class="form-group">
+                              <label class='form-control-label' for='ars_contact'>Contact No</label> {{form.ars_contact| append_attr:"class: form-control"|append_attr:"tabindex:312"}}
+                              
+                            </div>
+                          </div>
+                     </div>
+                     </div>
+                      </div>
+                       </div>
+
+                <div class="card border-info mb-3">
+                  <div class="card-body  text-info">
+                    <div class="col-lg-12">
+                     
+
                         <div class="row">
                           <div class="col-lg-3">
                           <div class="form-group">                    
@@ -1466,16 +1489,34 @@ label.form-control-label{
                           </div>
                     </div> 
                     <div class="row">
+                      <div class="col-lg-6">
+                            <div class="form-group">
+                              <label class='form-control-label' for='val_email'>Email Address</label> {{form.val_email| append_attr:"class: form-control"|append_attr:"tabindex:312"}}
+                              
+                            </div>
+                          </div>
+                          <div class="col-lg-6">
+                            <div class="form-group">
+                              <label class='form-control-label' for='val_contact'>Contact No</label> {{form.val_contact| append_attr:"class: form-control"|append_attr:"tabindex:312"}}
+                              
+                            </div>
+                          </div>
+                     </div>
+
+                   
+                  </div> 
+
+                     </div> 
+                    </div> 
+                       <div class="row">
                           <div class="col-lg-8">
                             <div class="form-group">
                               <label class='form-control-label' for='ars_notes'>Notes</label> {{form.ars_notes| append_attr:"class: form-control"|append_attr:"tabindex:317"}}
                         </div> 
                       </div> 
                     </div>
-                  </div> 
 
-                     </div> 
-                    </div> 
+
                 </div>  
               </div>
             </div>
@@ -1747,11 +1788,15 @@ label.form-control-label{
           success: function (data) {
             $('#id_ars_license').val(data.ClinStaff_License);
             $('#id_ars_designation').val(data.ClinStaff_Designation);
+            $('#id_ars_contact').val(data.ClinStaff_Contact);
+            $('#id_ars_email').val(data.ClinStaff_Email);
           }
         });
       } else {
         $('#id_ars_license').val('');
         $('#id_ars_designation').val('');
+        $('#id_ars_contact').val('');
+        $('#id_ars_email').val('');
       }
     });
 
@@ -1766,11 +1811,15 @@ label.form-control-label{
           success: function (data) {
             $('#id_val_license').val(data.ClinStaff_License);
             $('#id_val_designation').val(data.ClinStaff_Designation);
+            $('#id_val_contact').val(data.ClinStaff_Contact);
+            $('#id_val_email').val(data.ClinStaff_Email);
           }
         });
       } else {
         $('#id_val_license').val('');
         $('#id_val_designation').val('');
+        $('#id_val_contact').val('');
+        $('#id_val_email').val('');
       }
     });
 
