--- a/apps/templates/home/tables.html
+++ b/apps/templates/home/tables.html
@@ -1,10 +1,21 @@
 {% extends 'layouts/base.html' %}
+<style>
+  .sort-arrow {
+    font-size: 0.8rem;
+    color: #666;
+    padding-left: 5px;
+  }
+  th.sort {
+    cursor: pointer;
+  }
+</style>
 
 {% block title %} Tables {% endblock title %}
 
 
 
 {% block content %}
+
 
 
   <div class="header bg-primary pb-6">
@@ -60,16 +71,43 @@
           </div>
           <!-- Light table -->
           <div class="table-responsive">
-            <table class="table align-items-center table-flush" style="border-collapse: collapse; margin: 0%; padding: 0%;">
+           <table class="table align-items-center table-flush" style="border-collapse: collapse; margin: 0%; padding: 0%;">
               <thead class="thead-light" style="text-align: center;">
                 <tr>
                   <th scope="col"> EDIT</th>
-                  
-                  <th colspan="2"  scope="col" class="sort" data-sort="Egasp_Id">Identification</th>
-                  <th colspan="2" scope="col" class="sort" data-sort="Clinic">Patient Detatils</th>
-                  <th colspan="2" scope="col" class="sort" data-sort="Uic_Ptid">Specimen Details</th>
-                  <th scope="col">Date Encoded</th>
-                  <th scope="col">Antibiotic Results</th>
+                  <th>
+                      <a href="?sort=Egasp_Id&order={% if current_sort == 'Egasp_Id' and current_order == 'asc' %}desc{% else %}asc{% endif %}">
+                        Identification
+                        {% if current_sort == 'Egasp_Id' %}
+                          {% if current_order == 'asc' %}▲{% else %}▼{% endif %}
+                        {% endif %}
+                      </a>
+                    </th>
+                    <th>
+                      <a href="?sort=Last_Name&order={% if current_sort == 'Last_Name' and current_order == 'asc' %}desc{% else %}asc{% endif %}">
+                        Patient Details
+                        {% if current_sort == 'Last_Name' %}
+                          {% if current_order == 'asc' %}▲{% else %}▼{% endif %}
+                        {% endif %}
+                      </a>
+                    </th>
+                    <th>
+                      <a href="?sort=Date_Specimen_Collection&order={% if current_sort == 'Date_Specimen_Collection' and current_order == 'asc' %}desc{% else %}asc{% endif %}">
+                        Specimen Details
+                        {% if current_sort == 'Date_Specimen_Collection' %}
+                          {% if current_order == 'asc' %}▲{% else %}▼{% endif %}
+                        {% endif %}
+                      </a>
+                    </th>
+                     <th>
+                      <a href="?sort=Date_of_Entry&order={% if current_sort == 'Date_of_Entry' and current_order == 'asc' %}desc{% else %}asc{% endif %}">
+                        Date Modified
+                        {% if current_sort == 'Date_of_Entry' %}
+                          {% if current_order == 'asc' %}▲{% else %}▼{% endif %}
+                        {% endif %}
+                      </a>
+                    </th>
+                  <th class="sort">Antibiotic Results</th>
                   <th> PRINT</th>
                 </tr>
               </thead>
@@ -82,16 +120,16 @@
                         <i class="fa fa-trash" aria-hidden="true"></i> &nbspDelete</a> <span style="display: block; line-height: 8px;"><br></span>
                   
                   </td>
-                  <td colspan="2">
+                  <td >
                       EGASP ID: &nbsp; <strong>{{isolate.Egasp_Id}}</strong><br> 
                       UIC PTID: &nbsp;<strong>  {{isolate.Uic_Ptid}}</strong> <br>
                       Clinic: &nbsp; <strong> {{isolate.Clinic}}</strong>  
                   </td>
-                  <td colspan="2">Patient Name: &nbsp; <strong>{{isolate.First_Name}}</strong>&nbsp; <strong>{{isolate.Last_Name}} </strong><br>
+                  <td >Patient Name: &nbsp; <strong>{{isolate.First_Name}}</strong>&nbsp; <strong>{{isolate.Last_Name}} </strong><br>
                       Age: &nbsp; <strong>{{isolate.Age}}</strong> <br>
                       Sex: &nbsp; <strong>{{isolate.Sex}}</strong>
                   </td>
-                  <td colspan="2">Specimen Date: &nbsp; <strong>{{isolate.Date_Specimen_Collection}}</strong><br>
+                  <td >Specimen Date: &nbsp; <strong>{{isolate.Date_Specimen_Collection}}</strong><br>
                       Specimen Type: &nbsp; <strong>{{isolate.Specimen_Type}}</strong><br>
                       Specimen Quality: &nbsp; <strong>{{isolate.Specimen_Quality}}</strong>
                   </td>
