edi tables.html

--- a/apps/templates/home/tables.html
+++ b/apps/templates/home/tables.html
@@ -69,6 +69,7 @@
               </div>
             </div>
           </div>
+          <div class="card-body">
           <!-- Light table -->
           <div class="table-responsive">
            <table class="table align-items-center table-flush" style="border-collapse: collapse; margin: 0%; padding: 0%;">
@@ -191,6 +192,7 @@
               
               </tbody>
             </table>
+            </div>
 
 <!-- Add this modal HTML at the end of your template (tables.html) -->
 <form method="POST">
