--- a/apps/templates/home/GS_result.html
+++ b/apps/templates/home/GS_result.html
@@ -99,9 +99,12 @@
         <tr><td colspan="4"><strong>Epithelial Cells:</strong></td>  <td colspan="4" style="text-decoration: underline;">{{isolate.Epithelial_Cells}}</td></tr>
         <tr><td colspan="4"><strong>Gram Negative Intracellular Diplococci:</strong></td> <td colspan="4" style="text-decoration: underline;">{{isolate.Gram_Neg_Intracellular}}</td></tr>
         <tr><td colspan="4"><strong>Gram Negative Extracellular Diplococci:</strong></td><td colspan="4" style="text-decoration: underline;">{{isolate.Gram_Neg_Extracellular}}</td></tr>
-        <tr><td colspan="4"><strong>Others:</strong></td><td colspan="4" style="text-decoration: underline;">&nbsp;{{isolate.GS_Others}}</td></tr>
+        <tr><td colspan="4"><strong>Others:</strong></td></tr>
+        {% if isolate.GS_Other_sp and isolate.GS_Other_sp != "" %}<tr><td colspan="4" >&nbsp;&nbsp;<strong><u>{{isolate.GS_Others}}</u></strong></td><td colspan="4" style="text-decoration: underline;">{{isolate.GS_Other_sp}}</td></tr> {% endif %}
+        {% if isolate.GS_Other_sp2 and isolate.GS_Other_sp2 != "" %}<tr><td colspan="4" >&nbsp;&nbsp;<strong><u>{{isolate.GS_Others2}}</u></strong></td><td colspan="4" style="text-decoration: underline;">{{isolate.GS_Other_sp2}}</td></tr>{% endif %}
+        {% if isolate.GS_Other_sp3 and isolate.GS_Other_sp3 != "" %}<tr><td colspan="4" >&nbsp;&nbsp;<strong><u>{{isolate.GS_Others3}}</u></strong></td><td colspan="4" style="text-decoration: underline;">{{isolate.GS_Other_sp3}}</td></tr>{% endif %}
     </table>
-    <br>
+
     <br>
     <table>
               <thead>
@@ -116,11 +119,15 @@
                 <tr>
                     <td colspan="2" style="text-align: center;">Organism:</td>
                     {% if isolate.Culture_Result == "Positive" %}
-                    <td colspan="6" style="text-align: left;"> <u> <i>Positive for Neisseria gonorrhoeae</i> after {{ isolate.Growth|safe }} hrs. of incubation</u></td>
+                    <td colspan="6" style="text-align: left;"> <u> <i>Positive for Neisseria gonorrhoeae</i> after {{ isolate.Growth|safe }} hrs. of incubation</u></td> <br>
+                    
                     {%else%}
-                    <td colspan="6" style="text-align: left;"><u>No <i>Neisseria gonorrhoeae</i> isolated after {{ isolate.Growth|safe }} hrs. of incubation </u></td>
+                    <td colspan="6" style="text-align: left;"><u>No <i>Neisseria gonorrhoeae</i> isolated after {{ isolate.Growth|safe }} hrs. of incubation </u></td> <br>
+                    
                     {% endif %}
                 </tr>
+                <tr><td colspan="2"></td><td colspan="6" style="text-align: left;"><u>{{isolate.Growth_span_other}}</u></td></tr>
+                
             </tbody>
     </table>
     <br>
@@ -204,14 +211,14 @@
         <tr>
             <td colspan="2" style="text-align: center;">{{isolate.Date_Released}}</td>
             <td style="text-align: center;" colspan="2" >
-                <strong class="signature-name"><br><br>{{isolate.Laboratory_Staff}}</strong><br>
-                <span style="font-size: 10px;">License Number: {{isolate.ars_license}}</span> <br>
-                <span style="font-size: 10px;">{{isolate.ars_designation}}</span>
+                <strong class="signature-name"><br><br>Jaywardeen P. Abad, RMT</strong><br>
+                <span style="font-size: 10px;">License Number: 0042797</span> <br>
+                <span style="font-size: 10px;">Medical Technologist</span>
             </td>
             <td style="text-align: center;" colspan="2">
-                 <strong class="signature-name"><br><br>{{isolate.Validator_Pers}}</strong><br>
-                <span style="font-size: 10px;"> License Number: {{isolate.val_license}} </span> <br>
-                <span style="font-size: 10px;"> {{isolate.val_designation}} </span>
+                 <strong class="signature-name"><br><br>Manuel C. Jamoralin Jr., RMT</strong><br>
+                <span style="font-size: 10px;"> License Number: 0032847 </span> <br>
+                <span style="font-size: 10px;"> Medical Technologist </span>
             </td>
             <td style="text-align: center;" colspan="2">
                 <strong class="signature-name"><br><br>Sonia B. Sia, MD</strong><br>
