--- a/apps/templates/home/edit.html
+++ b/apps/templates/home/edit.html
@@ -1063,7 +1063,7 @@ label.form-control-label{
                     <div class="row">
                       <div class="col-lg-6">
                         <div class="form-group">
-                          <label class='form-control-label' for='Gram_Neg_Intracellular'>Gram-Neg Intracellular</label> {{form.Gram_Neg_Intracellular| append_attr:"class: form-control"|append_attr:"tabindex:119" }}
+                          <label class='form-control-label' for='Gram_Neg_Intracellular'>Gram-Neg Intracellular</label> {{form.Gram_Neg_Intracellular| append_attr:"class: form-control" |append_attr:"tabindex:119"}}
                         </div>
                       </div>
                       <div class="col-lg-6">
@@ -1073,20 +1073,50 @@ label.form-control-label{
                       </div>
                     </div>
                     <div class="row">
-                      <div class="col-lg-12">
-                        <label class='form-control-label' for='GS_Others'>Others</label> {{form.GS_Others| append_attr:"class: form-control"|append_attr:"tabindex:121"}}
-                      </div>
+                        <div class="col-lg-12">
+                        <div class="form-group">
+                        <label class='form-control-label' for='GS_Date_Released'>Date Released</label> {{form.GS_Date_Released| append_attr:"class: form-control" |append_attr:"tabindex:120"}}
+                      </div></div>
                     </div>
-                    <br>
-                    <div class="row">
-                      <div class="col-lg-8">
-                        <label class='form-control-label' for='GS_Date_Released'>Date Released</label> {{form.GS_Date_Released| append_attr:"class: form-control"|append_attr:"tabindex:122" }}
-                      </div>
+                    <div class="row">    
+                      <div class="col-lg-3">
+                      <div class="form-group">
+                        <label class='form-control-label' for='GS_Other_sp'>(1) Other </label> {{form.GS_Other_sp| append_attr:"class: form-control"|append_attr:"tabindex:122"}}
+                      </div></div> 
+                      <div class="col-lg-9">
+                        <div class="form-group">
+                        <label class='form-control-label' for='GS_Others'>(1) Details </label> {{form.GS_Others| append_attr:"class: form-control"|append_attr:"tabindex:121"}}
+                      </div></div>
+                      
+                     
+                    </div>
+                       <div class="row">     
+                        <div class="col-lg-3">
+                      <div class="form-group">
+                        <label class='form-control-label' for='GS_Other_sp2'>(2) Other </label> {{form.GS_Other_sp2| append_attr:"class: form-control"|append_attr:"tabindex:122"}}
+                      </div></div>
+                      <div class="col-lg-9">
+                        <div class="form-group">
+                        <label class='form-control-label' for='GS_Others2'>(2) Details </label> {{form.GS_Others2| append_attr:"class: form-control"|append_attr:"tabindex:122"}}
+                      </div></div>
+                     
+                     
+                    </div>
+                       <div class="row">  
+                        <div class="col-lg-3">
+                      <div class="form-group">
+                        <label class='form-control-label' for='GS_Other_sp3'>(3) Other</label> {{form.GS_Other_sp3| append_attr:"class: form-control"|append_attr:"tabindex:122"}}
+                      </div></div>   
+                      <div class="col-lg-9">
+                        <div class="form-group">
+                        <label class='form-control-label' for='GS_Others3'>(3) Details </label> {{form.GS_Others3| append_attr:"class: form-control"|append_attr:"tabindex:122"}}
+                      </div></div>
+                      
+                     
                     </div>
                   </div>
                 </div>
               </div>
-             
                     <div class="col-lg-6">
                       <h6 class="heading-small text-muted mb-4">Reporting to EB</h6>
                       <div class="card border-info mb-3">
@@ -1149,15 +1179,19 @@ label.form-control-label{
                     <label class='form-control-label' for='Culture_Result'>Culture Result</label> {{form.Culture_Result| append_attr:"class: form-control"|append_attr:"tabindex:129" }}
                   </div></div>
                 </div>
-                  <div class="row">
+                 <div class="row">
                     
                   <div class="col-lg-4">
                     <div class="form-group">
                     <label class='form-control-label' for='Growth'>Growth</label> {{form.Growth| append_attr:"class: form-control"|append_attr:"tabindex:130" }}
                   </div></div>
-                  <div class="col-lg-8">
+                  <div class="col-lg-4">
                     <div class="form-group">
-                    <label class='form-control-label' for='Growth_span'>&nbsp;</label> {{form.Growth_span| append_attr:"class: form-control" }}
+                    <label class='form-control-label' for='Growth_span'>Incubation period</label> {{form.Growth_span| append_attr:"class: form-control"|append_attr:"tabindex:130"}}
+                  </div></div>
+                  <div class="col-lg-4">
+                    <div class="form-group">
+                    <label class='form-control-label' for='Growth_span_other'>Comments</label> {{form.Growth_span_other| append_attr:"class: form-control"|append_attr:"tabindex:130"}}
                   </div></div>
                 </div>
             
@@ -1174,7 +1208,7 @@ label.form-control-label{
                       </div>
                         <div class="col-lg-4">
                           <div class="form-group">
-                            <label class='form-control-label' for='Beta_Lactamase'>Beta Lactamase</label> {{form.Beta_Lactamase| append_attr:"class: form-control"|append_attr:"tabindex:300"}}
+                            <label class='form-control-label' for='Beta_Lactamase'>Beta Lactamase</label> {{form.Beta_Lactamase| append_attr:"class: form-control"|append_attr:"tabindex:131"}}
                           </div>
                         </div>
                       <div class="col-lg-4">
